--- a/DexMasterUI/Components/Users/UserProfiles.razor
+++ b/DexMasterUI/Components/Users/UserProfiles.razor
@@ -6,22 +6,11 @@
         <MudItem xs="4">
             <MudStack AlignItems="AlignItems.Center">
                 <MudAvatar Color="Color.Secondary" Variant="Variant.Filled" Size="Size.Large">
-                    @(_user?.DisplayName?.Substring(0, 1))
+                    @(_user?.Username?.Substring(0, 1))
                 </MudAvatar>
-                @if (string.IsNullOrWhiteSpace(_user.Username))
-                {
-                    <MudStack Row=true>
-                        <MudTextField Value="@_user.FirstName" Label="First Name" Variant="Variant.Outlined" ReadOnly="true" Margin="Margin.Dense" />
-                        <MudTextField Value="@_user.LastName" Label="Last Name" Variant="Variant.Outlined" ReadOnly="true" Margin="Margin.Dense" />
-                    </MudStack>
-                    <MudButton Color="Color.Secondary" Variant="Variant.Filled">
-                        Create Username
-                    </MudButton>
-                }
-                else
-                {
-                    
-                }
+                <MudStack Row=true>
+                    <MudTextField Value="@_user.Username" Label="Username" Variant="Variant.Outlined" ReadOnly="true" Margin="Margin.Dense" />
+                </MudStack>
                 <ConfigUsername LoggedInUser="_user" />
                 <MudTextField Value="@_user.EmailAddress" Label="Email" Variant="Variant.Outlined" ReadOnly="true" Margin="Margin.Dense" />
             </MudStack>
@@ -35,7 +24,7 @@
     [Parameter]
     public string UserId { get; set; }
 
-    private User _user { get; set; }
+    private User _user;
 
     protected override async Task OnParametersSetAsync()
     {
