--- a/DexMasterUI/Shared/LoginDisplay.razor
+++ b/DexMasterUI/Shared/LoginDisplay.razor
@@ -7,7 +7,7 @@
                 <MudStack AlignItems="AlignItems.Center" Row="true">
                     <MudStack Spacing="1" Justify="Justify.Center">
                         <MudText Typo="Typo.body1">
-                            @LoggedInUser.DisplayName
+                            @LoggedInUser.Username
                         </MudText>
                         <MudText Typo="Typo.body2">
                             @LoggedInUser.EmailAddress
@@ -21,10 +21,6 @@
             <ChildContent>
                 <MudMenuItem>Notifications</MudMenuItem>
                 <MudMenuItem @onclick="@(() => NavigateTo($"Profile/{LoggedInUser.Id}"))">Profile</MudMenuItem>
-                @if (LoggedInUser.VipStatus == VipStatus.Admin)
-                {
-                <MudMenuItem @onclick="@(() => NavigateTo("Admin"))">Admin</MudMenuItem>
-                }
                 <MudMenuItem @onclick="@(() => NavigateTo("Identity/Logout", true))">Logout</MudMenuItem>
             </ChildContent>
         </MudMenu>
