Store BasicPokemon in DB for manipulation

--- a/DexMasterUI/Components/Admin/Admin.razor
+++ b/DexMasterUI/Components/Admin/Admin.razor
@@ -1,4 +1,5 @@
 @page "/admin"
+@using DexMasterLibrary.Enums
 
 <MudOverlay @bind-Visible="_showLoadingArt" DarkBackground="true" ZIndex="9999" AutoClose="true">
      <MudProgressCircular Color="Color.Secondary" Indeterminate="true" />
@@ -44,7 +45,17 @@
         while (pokedexNumber < 1017)
         {
             IEnumerable<Pokemon> pokemonList = await pokeApiService.GetPokemonListAsync(100, pokedexNumber);
-            await pokemonData.CreateMultiplePokemonAsync(pokemonList);
+            
+            IEnumerable<BasicPokemon> basicPokemonList = pokemonList.Select(p => new BasicPokemon
+            {
+                Name = CommonFunctions.Capitalise(p.Name),
+                NationalDexNumber = p.Id,
+                BasicImageSpriteUrl = p.Sprites.FrontDefault,
+                Type1 = CommonFunctions.ConvertStringToEnum<Types>(p.Types[0].Type.Name).GetValueOrDefault(),
+                Type2 = p.Types.Count > 1 ? CommonFunctions.ConvertStringToEnum<Types>(p.Types[1].Type.Name) : null
+            });
+            
+            await basicPokemonData.CreateMultipleBasicPokemonAsync(basicPokemonList);
             pokedexNumber += 100;
         }
 
