--- a/DexMasterUI/_Imports.razor
+++ b/DexMasterUI/_Imports.razor
@@ -25,6 +25,7 @@
 @inject IHttpContextAccessor httpContextAccessor
 @inject IUserData userData
 @inject IPokemonData pokemonData
+@inject IBasicPokemonData basicPokemonData
 @inject IDialogService dialogService
 @inject ISnackbar snackbar
 @inject IDbConnection dbConnection
