--- a/DexMasterUI/Components/Display/PokemonCard.razor
+++ b/DexMasterUI/Components/Display/PokemonCard.razor
@@ -4,7 +4,7 @@
         <MudCardHeader>
             <CardHeaderAvatar>
                 <MudAvatar Color="Color.Dark" Variant="Variant.Filled">
-                    @Pokemon.Id
+                    @Pokemon.NationalDexNumber
                 </MudAvatar>
             </CardHeaderAvatar>
             <CardHeaderContent>
@@ -15,7 +15,7 @@
                 <MudIconButton Icon="@Icons.Material.Filled.OpenInNew" Variant="Variant.Outlined" Color="Color.Primary"/>
             </CardHeaderActions>
         </MudCardHeader>
-        <!--<MudCardMedia Image="@Pokemon.Sprites.FrontDefault" />-->
+        <!--<MudCardMedia Image="@Pokemon.BasicImageSpriteUrl" />-->
         <MudCardContent>
             
         </MudCardContent>
@@ -35,7 +35,7 @@
 
 @code {
     [Parameter] 
-    public Pokemon Pokemon { get; set; }
+    public BasicPokemon Pokemon { get; set; }
 
     [CascadingParameter] 
     public User LoggedInUser { get; set; }
@@ -49,7 +49,7 @@
         AuthenticationState authState = await authProvider.GetAuthenticationStateAsync();
         if (authState.User.Identity != null) _userIsAuthenticated = authState.User.Identity.IsAuthenticated;
         
-        _pokemonTypes = Pokemon.Types.Aggregate("", (current, type) => current + (CommonFunctions.Capitalise(type.Type.Name) + " "));
+        _pokemonTypes = Pokemon.Type1.ToString() + " " + Pokemon.Type2.ToString();
 
         _readOnly = !_userIsAuthenticated;
     }
