--- a/DexMasterUI/Components/Display/PokemonCardDialog.razor
+++ b/DexMasterUI/Components/Display/PokemonCardDialog.razor
@@ -9,7 +9,7 @@
     [Parameter]
     public User LoggedInUser { get; set; }
     [Parameter] 
-    public Pokemon Pokemon { get; set; }
+    public BasicPokemon Pokemon { get; set; }
 
     void Submit() => MudDialog.Close(DialogResult.Ok(true));
     void Cancel() => MudDialog.Cancel();
