--- a/DexMasterUI/Components/Display/PokemonGrid.razor
+++ b/DexMasterUI/Components/Display/PokemonGrid.razor
@@ -12,7 +12,7 @@
     else if (_pokemon.Any())
     {
         <MudGrid>
-            @foreach (Pokemon pokemon in _pokemon)
+            @foreach (BasicPokemon pokemon in _pokemon)
             {
                 <MudItem lg="2" md="6" xs="12">
                     <CascadingValue Value="@_loggedInUser">
@@ -69,7 +69,7 @@
 
     private readonly IPokeApiService _pokeApiService = new PokeApiService();
     
-    private IEnumerable<Pokemon> _pokemon;
+    private IEnumerable<BasicPokemon> _pokemon;
     private int _currentPage = 1;
     private int _offset = 12;
     private User _loggedInUser = null;
@@ -86,7 +86,7 @@
             _loggedInUser = await authProvider.GetUserFromAuthAsync(userData);
         }
 
-        _pokemon = await _pokeApiService.GetPokemonListAsync(_offset, (_currentPage-1) * _offset);
+        _pokemon = await basicPokemonData.GetBasicPokemonListAsync(_offset, (_currentPage-1) * _offset);
 
         _isLoading = false;
 
@@ -98,7 +98,7 @@
         _isLoading = true;
         _currentPage = newPage;
         
-        _pokemon = await _pokeApiService.GetPokemonListAsync(_offset, (_currentPage-1) * _offset);
+        _pokemon = await basicPokemonData.GetBasicPokemonListAsync(_offset, (_currentPage-1) * _offset);
 
         await protectedLocalStorage.SetAsync(SavedOffset, _offset);
 
