--- a/DexMasterUI/Components/Display/PokemonGrid.razor
+++ b/DexMasterUI/Components/Display/PokemonGrid.razor
@@ -12,7 +12,7 @@
     else if (_pokemon.Any())
     {
         <MudGrid>
-            @foreach (BasicPokemon pokemon in _pokemon)
+            @foreach (Pokemon pokemon in _pokemon)
             {
                 <MudItem lg="2" md="6" xs="12">
                     <CascadingValue Value="@_loggedInUser">
@@ -66,10 +66,8 @@
     public string UserId { get; set; }
 
     private const string SavedOffset = "Offset";
-
-    private readonly IPokeApiService _pokeApiService = new PokeApiService();
     
-    private IEnumerable<BasicPokemon> _pokemon;
+    private IEnumerable<Pokemon> _pokemon;
     private int _currentPage = 1;
     private int _offset = 12;
     private User _loggedInUser = null;
@@ -83,10 +81,10 @@
         
         if (_loggedInUser is null)
         {
-            _loggedInUser = await authProvider.GetUserFromAuthAsync(userData);
+            _loggedInUser = await authProvider.GetUserFromAuthAsync(UserData);
         }
 
-        _pokemon = await basicPokemonData.GetBasicPokemonListAsync(_offset, (_currentPage-1) * _offset);
+        _pokemon = await PokeApiService.GetPokemonListAsync(_offset, (_currentPage-1) * _offset);
 
         _isLoading = false;
 
@@ -98,7 +96,7 @@
         _isLoading = true;
         _currentPage = newPage;
         
-        _pokemon = await basicPokemonData.GetBasicPokemonListAsync(_offset, (_currentPage-1) * _offset);
+        _pokemon = await PokeApiService.GetPokemonListAsync(_offset, (_currentPage-1) * _offset);
 
         await protectedLocalStorage.SetAsync(SavedOffset, _offset);
 
