Revert "Major changes - no longer storing anything in localDB but relying on local cache (since it's faster)"
This reverts commit 4d010b292b5afa4f067462606ff235bc433db246.

--- a/DexMasterUI/Components/Display/PokemonCard.razor
+++ b/DexMasterUI/Components/Display/PokemonCard.razor
@@ -4,7 +4,7 @@
         <MudCardHeader>
             <CardHeaderAvatar>
                 <MudAvatar Color="Color.Dark" Variant="Variant.Filled">
-                    @Pokemon.Id
+                    @Pokemon.NationalDexNumber
                 </MudAvatar>
             </CardHeaderAvatar>
             <CardHeaderContent>
@@ -15,7 +15,7 @@
                 <MudIconButton Icon="@Icons.Material.Filled.OpenInNew" Variant="Variant.Outlined" Color="Color.Primary"/>
             </CardHeaderActions>
         </MudCardHeader>
-        <!--<MudCardMedia Image="@Pokemon.Sprites.FrontDefault" />-->
+        <!--<MudCardMedia Image="@Pokemon.BasicImageSpriteUrl" />-->
         <MudCardContent>
             
         </MudCardContent>
@@ -41,7 +41,7 @@
 
 @code {
     [Parameter] 
-    public Pokemon Pokemon { get; set; }
+    public BasicPokemon Pokemon { get; set; }
 
     [CascadingParameter] 
     public User LoggedInUser { get; set; }
@@ -55,8 +55,15 @@
         AuthenticationState authState = await authProvider.GetAuthenticationStateAsync();
         if (authState.User.Identity != null) _userIsAuthenticated = authState.User.Identity.IsAuthenticated;
         
-        _pokemonTypes = Pokemon.Types.Aggregate("", (current, type) => current + (type.Type.Name + " "));
+        _pokemonTypes = Pokemon.Type1.ToString() + " " + Pokemon.Type2.ToString();
 
         _readOnly = !_userIsAuthenticated;
+    }
+
+    private async Task OpenDialog()
+    {
+        var parameters = new DialogParameters { ["PokemonId"] = Pokemon.Id, ["LoggedInUser"] = LoggedInUser };
+        var options = new DialogOptions { CloseOnEscapeKey = true, NoHeader = true};
+        await dialogService.ShowAsync<PokemonCardDialog>("Show Pokemon", parameters, options);
     }
 }
