--- a/DexMasterUI/_Imports.razor
+++ b/DexMasterUI/_Imports.razor
@@ -21,9 +21,11 @@
 @inject ProtectedLocalStorage protectedLocalStorage
 @inject NavigationManager navManager
 @inject AuthenticationStateProvider authProvider
-@inject IPokeApiService PokeApiService
-@inject IHttpContextAccessor HttpContextAccessor
-@inject IUserData UserData
-@inject IDialogService DialogService
-@inject ISnackbar Snackbar
-@inject IDbConnection DbConnection
+@inject IPokeApiService pokeApiService
+@inject IHttpContextAccessor httpContextAccessor
+@inject IUserData userData
+@inject IPokemonData pokemonData
+@inject IBasicPokemonData basicPokemonData
+@inject IDialogService dialogService
+@inject ISnackbar snackbar
+@inject IDbConnection dbConnection
