--- a/DexMasterUI/Components/Display/PokemonDetails.razor
+++ b/DexMasterUI/Components/Display/PokemonDetails.razor
@@ -1,6 +1,10 @@
 @if (_pokemon != null && _pokemonSpecies != null)
 {
-    <h1>@_pokemon.Name</h1>
+    <MudStack>
+        <MudPaper Class="pa-3">Item 1</MudPaper>
+        <MudPaper Class="pa-3">Item 2</MudPaper>
+        <MudPaper Class="pa-3">Item 3</MudPaper>
+    </MudStack>
 }
 
 @code {
