--- a/DexMasterUI/Components/Display/PokemonGrid.razor
+++ b/DexMasterUI/Components/Display/PokemonGrid.razor
@@ -60,7 +60,6 @@
                     <MudSelectItem Value="15" />
                     <MudSelectItem Value="30" />
                     <MudSelectItem Value="60" />
-                    <MudSelectItem Value="90" />
                 </MudSelect>
             </MudItem>
         </MudGrid>
@@ -71,10 +70,8 @@
     [Parameter]
     public string UserId { get; set; }
 
-    private const string SavedOffset = "Offset";
+    private const string SavedLimit = "Limit";
 
-    private readonly IPokeApiService _pokeApiService = new PokeApiService();
-    
     private IEnumerable<BasicPokemon> _pokemon;
     private int _currentPage = 1;
     private int _limit = 12;
@@ -85,30 +82,24 @@
 
     protected override async Task OnParametersSetAsync()
     {
-        _isLoading = true;
-        
         await CheckBrowserStorageAsync();
-        
         _loggedInUser ??= await authProvider.GetUserFromAuthAsync(userData);
-        
-        _totalPages = _limit == 0 ? 1 : (int)Math.Ceiling((double)_totalPokemon / _limit);
-
-        _pokemon = await basicPokemonData.GetBasicPokemonListAsync(_limit, (_currentPage-1) * _limit);
-
-        _isLoading = false;
-
-        StateHasChanged();
+        await LoadPokemon();
     }
 
     private async Task OnPageChanged(int newPage)
     {
-        _isLoading = true;
         _currentPage = newPage;
+        await LoadPokemon();
+        await protectedLocalStorage.SetAsync(SavedLimit, _limit);
+    }
+
+    private async Task LoadPokemon()
+    {
+        _isLoading = true;
         
         _pokemon = await basicPokemonData.GetBasicPokemonListAsync(_limit, (_currentPage-1) * _limit);
 
-        await protectedLocalStorage.SetAsync(SavedOffset, _limit);
-        
         _totalPages = _limit == 0 ? 1 : (int)Math.Ceiling((double)_totalPokemon / _limit);
 
         _isLoading = false;
@@ -118,7 +109,7 @@
 
     private async Task CheckBrowserStorageAsync()
     {
-        var localBrowserCardsPerPageResult = await protectedLocalStorage.GetAsync<int>(SavedOffset);
+        var localBrowserCardsPerPageResult = await protectedLocalStorage.GetAsync<int>(SavedLimit);
         _limit = localBrowserCardsPerPageResult.Success ? localBrowserCardsPerPageResult.Value : 12;
     }
 }
