--- a/DexMasterUI/Components/Display/PokemonDetails.razor
+++ b/DexMasterUI/Components/Display/PokemonDetails.razor
@@ -1,10 +1,39 @@
 @if (_pokemon != null && _pokemonSpecies != null)
 {
-    <MudStack>
-        <MudPaper Class="pa-3">Item 1</MudPaper>
-        <MudPaper Class="pa-3">Item 2</MudPaper>
-        <MudPaper Class="pa-3">Item 3</MudPaper>
-    </MudStack>
+    <MudCard>
+      <MudCardHeader>
+        @_pokemon.Name
+      </MudCardHeader>
+      <MudCardContent>
+        <MudGrid>
+          <MudItem>
+            <MudImage Src="@_pokemon.Sprites.FrontDefault" />
+          </MudItem>
+          <MudItem>
+            <MudText Typo="Typo.h6">Species</MudText>
+            <MudText Typo="Typo.body1">@_pokemonSpecies.Name</MudText>
+            <MudText Typo="Typo.h6">Height</MudText>
+            <MudText Typo="Typo.body1">@_pokemon.Height</MudText>
+            <MudText Typo="Typo.h6">Weight</MudText>
+            <MudText Typo="Typo.body1">@_pokemon.Weight</MudText>
+            <MudText Typo="Typo.h6">Abilities</MudText>
+            <MudText Typo="Typo.body1">
+              @foreach (var ability in _pokemon.Abilities)
+              {
+                <span>@ability.Ability.Name</span>
+              }
+            </MudText>
+            <MudText Typo="Typo.h6">Types</MudText>
+            <MudText Typo="Typo.body1">
+              @foreach (var type in _pokemon.Types)
+              {
+                <span>@type.Type.Name</span>
+              }
+            </MudText>
+          </MudItem>
+        </MudGrid>
+      </MudCardContent>
+    </MudCard>
 }
 
 @code {
