--- a/DexMasterUI/Components/Admin/Admin.razor
+++ b/DexMasterUI/Components/Admin/Admin.razor
@@ -63,7 +63,7 @@
                 Type2 = p.Types.Count > 1 ? CommonFunctions.ConvertStringToEnum<Types>(p.Types[1].Type.Name) : null
             });
             
-            await basicPokemonData.CreateMultipleBasicPokemonAsync(basicPokemonList);
+            await basicPokemonData.CreateMultipleBasicPokemonAsync(basicPokemonList, true);
             await pokemonData.CreateMultiplePokemonAsync(pokemonList);
             
             _pokedexNumber += lookup;
@@ -83,7 +83,7 @@
         {
             IEnumerable<PokemonSpecies> pokemonSpeciesList = await pokeApiService.GetPokemonSpeciesListAsync(lookup, _pokedexNumber);
 
-            await pokemonSpeciesData.CreateMultiplePokemonSpeciesAsync(pokemonSpeciesList);
+            await pokemonSpeciesData.CreateMultiplePokemonSpeciesAsync(pokemonSpeciesList, true);
             
             _pokedexNumber += lookup;
         }
